# Discord-Rust

./: .gitignore  Cargo.toml  README.md
src/: handler.rs  main.rs  receiver.rs  stt_model.rs
src/commands/: diceroll.rs  dm.rs  hello.rs  joinanddm.rs  joinvc.rs  leavevc.rs  mod.rs  ping.rs  playvc.rs  respondtodm.rs  stt.rs
