[package]
name = "my-discord-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11", features = ["client", "gateway", "model", "native_tls_backend"], default-features = false }
tokio = { version = "1", features = ["full"] }
